--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,7 @@ div.wrapper{
   text-overflow: ellipsis;
 }
 
-This is [an example](https://www.w3schools.com/cssref/tryit.asp?filename=trycss3_text-overflow/ "Text-Overflow") inline link.
+https://www.w3schools.com/cssref/tryit.asp?filename=trycss3_text-overflow/
 
 
 // For multi line
@@ -18,4 +18,4 @@ div.wrapper {
     overflow: hidden;
 }
 
-This is [an example](https://stackoverflow.com/questions/33058004/applying-an-ellipsis-to-multiline-text/ "Text-Overflow") inline link.
+https://stackoverflow.com/questions/33058004/applying-an-ellipsis-to-multiline-text/
